# kupala

./: .coverage.desktop.168502.635752  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  coverage.xml  mkdocs.yml  package-lock.json  pyproject.toml  setup.cfg
docs/: architecture.md  container.md  injections.md
kupala/: __init__.py  application.py  applications.py  asgi.py  authentication.py  boostrappers.py  choices.py  collection.py  config.py  console.py  constants.py  container.py  contracts.py  csrf.py  database.py  dependencies.py  dependency_resolvers.py  di.py  dispatching.py  dotenv.py  encryptors.py  error_codes.py  errors.py  exceptions.py  extensions.py  files.py  flashes.py  form_errors.py  formatters.py  guards.py  helpers.py  injectables.py  json.py  mail.py  mailers.py  mails.py  messages.py  middleware.py  pagination.py  passwords.py  (+27 more)
kupala-cli/: pyproject.toml
kupala-cli/kupala_cli/: __init__.py  __main__.py  generators.py  plugins.py
kupala-cli/kupala_cli/addons/project/: generator.py
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml.jinja2
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/alembic/: env.py.jinja2
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/alembic/versions/: 00000_initial.py
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/{{project_name}}/: __init__.py.jinja2  app.py.jinja2  settings.py
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/{{project_name}}/commands/: plugin.py
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/{{project_name}}/locale/: messages.pot
kupala-cli/kupala_cli/addons/project/templates/{{project_name}}/{{project_name}}/locale/en/LC_MESSAGES/: messages.po
kupala-cli/kupala_cli/commands/: add.py  new.py
kupala/app/: asgi.py  base.py  components.py
kupala/authentication/: __init__.py
kupala/cache/: __init__.py  _cache.py  backend.py  base.py  cache.py  compressors.py  decorators.py  dummy.py  file.py  memory.py  redis.py  serializers.py
kupala/cache/backends/: __init__.py  base.py  dummy.py  file.py  memory.py  redis.py
kupala/commands/: __init__.py  serve.py
kupala/console/: application.py
kupala/contrib/: htmx.py
kupala/contrib/babel/: __init__.py
kupala/contrib/forms/: __init__.py  choices.py  fields.py  file.py  forms.py  validators.py
kupala/contrib/forms/templates/kupala_forms/: forms.html
kupala/contrib/forms/tests/: test_async_form.py
kupala/contrib/mail/: __init__.py  commands.py  components.py  mails.py
kupala/contrib/mail/templates/kupala/mail/: base_mail.html  mail.css
kupala/contrib/mail/templates/kupala/mail/components/: column.html  envelope.html
kupala/contrib/mail/templates/kupala_mail/: base.html  components.html  mail.css
kupala/contrib/mail/templates/kupala_mail/components/: button.html  figure.html
kupala/contrib/mail/templates/mail/: base_mail.html  components.html  mail.css
kupala/contrib/mail/templates/mail/components/: base_button.html  button.html
kupala/contrib/mail/tests/: test_components.py  test_mails.py
kupala/contrib/permissions/: __init__.py
kupala/contrib/sentry/: __init__.py
kupala/contrib/sqlalchemy/: __init__.py  authentication.py  columns.py  commands.py  database.py  dependencies.py  extension.py  factories.py  manager.py  middleware.py  migrations.py  modelmixins.py  models.py  paginators.py  postgres.py  query.py  seeders.py  types.py
kupala/contrib/sqlalchemy/tests/: conftest.py  models.py  test_authentication.py  test_dependencies.py  test_middleware.py  test_modelmixins.py  test_query.py
kupala/db/: model.py  types.py
kupala/disks/: file_server.py  providers.py  storages.py
kupala/ext/: auth.py  cache.py  disks.py  flash.py  i18n.py  jinja.py  session.py  storages.py
kupala/extra/: mails.py
kupala/framework/: context_processors.py
kupala/framework/commands/: __init__.py  mails.py
kupala/framework/extensions/: __init__.py  authentication.py  console.py  hashers.py  jinja.py  mailers.py  routing.py
kupala/http/: __init__.py  asgi.py  context_processors.py  dispatching.py  exceptions.py  guards.py  protocols.py  request_parsers.py  requests.py  response_factories.py  responses.py  routing.py  websockets.py
kupala/http/middleware/: __init__.py  csrf.py  errors.py  exception.py  flash_messages.py  form_errors.py  guards.py  locale.py  method_override.py  request_id.py  request_limit.py  request_parser.py  stack.py  timeout.py  timezone.py
kupala/i18n/: __init__.py  formatters.py  helpers.py  language.py  locale.py  protocols.py  timezone.py  translator.py  utils.py
kupala/kupala/: applications.py  config.py  crypto.py  error_codes.py
kupala/kupala/db/: __init__.py  columns.py
kupala/middleware/: __init__.py  authentication.py  csrf.py  errors.py  exception.py  flash_messages.py  form_errors.py  guards.py  impersonation.py  locale.py  method_override.py  request_id.py  request_limit.py  template_context.py  timeout.py
kupala/middlewares/: base.py  decorators.py
kupala/security/: csrf.py  hashers.py  passwords.py  signing.py
kupala/storages/: file_server.py  storages.py
kupala/templates/errors/: http_error.html
kupala/templates/kupala/mail/: base.html  styles.css  test_message.html  test_message.txt
kupala/tests/: test_crypto.py  test_exceptions.py
tests/: conftest.py  renderer.py  test_action_config.py  test_application.py  test_authentication.py  test_authentication_login_guard.py  test_choices.py  test_collection.py  test_config.py  test_console.py  test_container.py  test_csrf.py  test_dependencies.py  test_di.py  test_di_registry.py  test_dotenv.py  test_encryptors.py  test_error_codes.py  test_error_handlers.py  test_errors.py  test_extensions.py  test_file_server.py  test_files.py  test_flashes.py  test_form_errors.py  test_guards.py  test_injectables.py  test_injections.py  test_json.py  test_lifespan.py  test_mail.py  test_mailers.py  test_messages.py  test_middleware.py  test_old_input.py  (+25 more)
(+114 files in other folders)
