[project]
name = "kupala"
version = "0.50.1"
description = "A web framework for those who value their time."
readme = "README.md"
authors = [{ name = "alex.oleshkevich", email = "alex.oleshkevich@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.45",
    "jinja2>=3.0",
    "starlette_babel>=1.0",
    "starception>=1.2",
    "starlette>=0.45",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "mailers[css_inline]>=3.2",
    "async_storages>=0.7",
    "cryptography>=44.0",
    "passlib>=1.7",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "starlette-flash>=1.0",
    "starlette-dispatch>=0.26.0",
    "starlette-auth>=0.2.3",
    "starsessions>=2.2.1",
    "limits>=4.0.1",
    "starlette-sqlalchemy>=0.1.1",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.1",
    "redis>=5.2.1",
    "types-babel>=2.11.0.15",
    "types-passlib>=1.7.7.20241221",
]
