[project]
name = "kupala-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "alex.oleshkevich", email = "alex.oleshkevich@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["click>=8.1", "kupala", "libcst>=1.6"]

[project.scripts]
kupala = "kupala_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
